a liitle bit date api

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGODB_PW = "Z03ys2w6"
+
+
+connection_string = "mongodb+srv://inside162544:Z03ys2w6@pythondb.piijqhq.mongodb.net/?retryWrites=true&w=majority&appName=PythonDB"
