--- a/Dormitory Services/.env
+++ b/Dormitory Services/.env
@@ -1,4 +1,1 @@
-MONGODB_PW = "Z03ys2w6"
-
-
-connection_string = "mongodb+srv://inside162544:Z03ys2w6@pythondb.piijqhq.mongodb.net/?retryWrites=true&w=majority&appName=PythonDB"
+MONGO_URI_DORMITORY=mongodb+srv://inside162544:Z03ys2w6@pythondb.piijqhq.mongodb.net/?retryWrites=true&w=majority&appName=PythonDB
