--- a/Dormitory Services/.env
+++ b/Dormitory Services/.env
@@ -1,1 +1,4 @@
-MONGO_URI_DORMITORY=mongodb+srv://inside162544:Z03ys2w6@pythondb.piijqhq.mongodb.net/?retryWrites=true&w=majority&appName=PythonDB
+MONGODB_PW = "Z03ys2w6"
+
+
+connection_string = "mongodb+srv://inside162544:Z03ys2w6@pythondb.piijqhq.mongodb.net/?retryWrites=true&w=majority&appName=PythonDB"
